--- a/index.html
+++ b/index.html
@@ -1,167 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Image to Text - Urdu OCR</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4/dist/tesseract.min.js"></script>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #dbe6f6, #c5796d);
+      font-family: 'Segoe UI', sans-serif;
+      background: #f7f9fb;
       margin: 0;
-      padding: 40px 20px;
-      direction: ltr;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
     }
-
-    .container {
-      max-width: 800px;
-      margin: auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-    }
-
     h1 {
-      text-align: center;
-      font-size: 28px;
+      margin-top: 30px;
+      font-size: 2.5rem;
       color: #333;
-      margin-bottom: 25px;
     }
-
+    .container {
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      margin: 30px;
+      width: 90%;
+      max-width: 600px;
+    }
     .upload-area {
-      border: 2px dashed #999;
-      border-radius: 10px;
-      padding: 25px;
-      text-align: center;
-      background: #fafafa;
+      border: 2px dashed #aaa;
+      border-radius: 12px;
+      padding: 40px;
+      background: #f0f4f7;
       cursor: pointer;
       transition: 0.3s;
     }
-
     .upload-area:hover {
-      background: #f0f0f0;
+      background: #e3eaf0;
     }
-
-    .upload-area p {
-      font-size: 18px;
-      color: #555;
+    .output-box {
+      margin-top: 20px;
+      padding: 20px;
+      text-align: right;
+      font-size: 1.2rem;
+      color: #222;
+      direction: rtl;
+      background: #fefefe;
+      border-radius: 10px;
+      border: 1px solid #ddd;
+      white-space: pre-wrap;
     }
-
+    #loader {
+      margin-top: 15px;
+      display: none;
+    }
     input[type="file"] {
       display: none;
     }
-
-    #output {
-      margin-top: 30px;
-      background: #fdfdfd;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      padding: 20px;
-      min-height: 120px;
-      white-space: pre-wrap;
-      font-size: 20px;
-      font-family: 'Noto Nastaliq Urdu', serif;
-      direction: rtl;
-      color: #222;
-      line-height: 1.8;
-    }
-
-    .loading {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .spinner {
-      border: 5px solid #f3f3f3;
-      border-top: 5px solid #007bff;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-      display: inline-block;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @media (max-width: 600px) {
-      .upload-area p {
-        font-size: 16px;
-      }
-      #output {
-        font-size: 18px;
-      }
+    .btn {
+      margin-top: 10px;
+      background: #4a90e2;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
+      border: none;
+      font-size: 1rem;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
 
+<h1>Image to Text (Urdu)</h1>
 <div class="container">
-  <h1>📷 Image to Text (Urdu OCR)</h1>
-
-  <label for="imageInput" class="upload-area">
-    <p>Click here to upload or paste an image (Ctrl+V)</p>
+  <label for="imageInput" class="upload-area" id="dropZone">
+    Click or Paste Image Here to Upload
+    <input type="file" id="imageInput" accept="image/*" />
   </label>
-  <input type="file" id="imageInput" accept="image/*">
-
-  <div class="loading" id="loading" style="display: none;">
-    <div class="spinner"></div>
-    <p>Please wait... extracting text from image</p>
-  </div>
-
-  <div id="output">Extracted Urdu text will appear here...</div>
+  <div id="loader">⏳ Processing image...</div>
+  <div class="output-box" id="outputText">Your extracted Urdu text will appear here...</div>
 </div>
 
+<!-- Tesseract.js -->
+<script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
 <script>
   const imageInput = document.getElementById('imageInput');
-  const output = document.getElementById('output');
-  const loading = document.getElementById('loading');
+  const dropZone = document.getElementById('dropZone');
+  const outputText = document.getElementById('outputText');
+  const loader = document.getElementById('loader');
 
-  function showLoading(show) {
-    loading.style.display = show ? 'block' : 'none';
-  }
-
-  function processImage(imgSrc) {
-    showLoading(true);
-    output.textContent = "";
-
-    Tesseract.recognize(imgSrc, 'urd', {
-      langPath: 'https://tessdata.projectnaptha.com/4.0.0_best',
-      logger: m => console.log(m)
-    }).then(({ data: { text } }) => {
-      showLoading(false);
-      output.textContent = text.trim() || "❌ No Urdu text found in the image.";
-    }).catch(err => {
-      console.error(err);
-      showLoading(false);
-      output.textContent = "⚠️ Something went wrong. Please try again.";
-    });
-  }
-
-  imageInput.addEventListener('change', function () {
-    if (this.files[0]) {
-      const reader = new FileReader();
-      reader.onload = () => processImage(reader.result);
-      reader.readAsDataURL(this.files[0]);
-    }
+  // Handle image upload
+  imageInput.addEventListener('change', (e) => {
+    const file = e.target.files[0];
+    if (file) handleOCR(file);
   });
 
-  window.addEventListener('paste', function (event) {
-    const items = (event.clipboardData || event.originalEvent.clipboardData).items;
+  // Paste image functionality
+  window.addEventListener('paste', (e) => {
+    const items = e.clipboardData.items;
     for (const item of items) {
-      if (item.type.indexOf("image") === 0) {
+      if (item.type.indexOf('image') !== -1) {
         const file = item.getAsFile();
-        const reader = new FileReader();
-        reader.onload = (event) => processImage(event.target.result);
-        reader.readAsDataURL(file);
+        if (file) handleOCR(file);
       }
     }
   });
+
+  // Drag & Drop
+  dropZone.addEventListener('dragover', (e) => {
+    e.preventDefault();
+    dropZone.style.background = '#e3eaf0';
+  });
+
+  dropZone.addEventListener('dragleave', () => {
+    dropZone.style.background = '#f0f4f7';
+  });
+
+  dropZone.addEventListener('drop', (e) => {
+    e.preventDefault();
+    dropZone.style.background = '#f0f4f7';
+    const file = e.dataTransfer.files[0];
+    if (file) handleOCR(file);
+  });
+
+  async function handleOCR(file) {
+    loader.style.display = 'block';
+    outputText.textContent = '';
+    const reader = new FileReader();
+    reader.onload = async () => {
+      const imgData = reader.result;
+      const result = await Tesseract.recognize(imgData, 'urd', {
+        langPath: 'https://tessdata.projectnaptha.com/4.0.0_best',
+        logger: m => console.log(m)
+      });
+      outputText.textContent = result.data.text.trim() || "❌ Urdu text not recognized!";
+      loader.style.display = 'none';
+    };
+    reader.readAsDataURL(file);
+  }
 </script>
 
 </body>
