--- a/index.html
+++ b/index.html
@@ -3,54 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Image to Text OCR</title>
+  <title>Image to Text (OCR)</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f7f9fb;
+      background: #f3f7fc;
       margin: 0;
       padding: 0;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
+      height: 100vh;
       text-align: center;
+      flex-direction: column;
+      transition: background 0.3s ease, color 0.3s ease;
     }
     h1 {
-      margin-top: 30px;
+      margin-top: 20px;
       font-size: 2.5rem;
       color: #333;
+      margin-bottom: 30px;
     }
     .container {
       background: #fff;
       border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      padding: 30px;
-      margin: 30px;
-      width: 90%;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+      padding: 40px;
+      width: 80%;
       max-width: 600px;
+      transition: background 0.3s ease;
+    }
+    .dark-mode .container {
+      background: #2c3e50;
+    }
+    .dark-mode body {
+      background: #34495e;
+      color: #ecf0f1;
     }
     .upload-area {
-      border: 2px dashed #aaa;
+      border: 3px dashed #3498db;
       border-radius: 12px;
-      padding: 40px;
-      background: #f0f4f7;
+      padding: 60px;
+      background: #eef5fb;
       cursor: pointer;
       transition: 0.3s;
+      font-size: 1.2rem;
+      color: #333;
+    }
+    .dark-mode .upload-area {
+      background: #34495e;
+      color: #ecf0f1;
+      border-color: #2980b9;
     }
     .upload-area:hover {
-      background: #e3eaf0;
+      background: #d6e7f5;
     }
     .output-box {
       margin-top: 20px;
       padding: 20px;
       font-size: 1.2rem;
-      color: #222;
+      color: #333;
       background: #fefefe;
       border-radius: 10px;
       border: 1px solid #ddd;
       white-space: pre-wrap;
       text-align: left;
       direction: ltr;
+    }
+    .dark-mode .output-box {
+      background: #2c3e50;
+      color: #ecf0f1;
+      border-color: #7f8c8d;
     }
     #loader {
       margin-top: 15px;
@@ -59,50 +82,49 @@
     input[type="file"] {
       display: none;
     }
-    .btn {
-      margin-top: 10px;
-      background: #4a90e2;
-      color: white;
+    #copyBtn {
+      margin-top: 20px;
       padding: 10px 20px;
-      border-radius: 8px;
+      background: #3498db;
+      color: #fff;
       border: none;
-      font-size: 1rem;
+      border-radius: 5px;
       cursor: pointer;
-    }
-    select {
-      margin-top: 15px;
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
       font-size: 1rem;
+      transition: background 0.3s;
+    }
+    #copyBtn:hover {
+      background: #2980b9;
+    }
+    #darkModeToggle {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #2c3e50;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    #darkModeToggle:hover {
+      background: #34495e;
     }
   </style>
 </head>
 <body>
 
-<h1>Image to Text (Multi-Language OCR)</h1>
+<h1>Extract Text from Image</h1>
 <div class="container">
   <label for="imageInput" class="upload-area" id="dropZone">
-    Click or Paste Image Here to Upload
+    Drop or Click to Upload Image
     <input type="file" id="imageInput" accept="image/*" />
   </label>
 
-  <select id="langSelect">
-    <option value="eng" selected>English</option>
-    <option value="urd">Urdu</option>
-    <option value="ara">Arabic</option>
-    <option value="hin">Hindi</option>
-    <option value="fas">Persian</option>
-    <option value="fra">French</option>
-    <option value="spa">Spanish</option>
-    <option value="deu">German</option>
-    <option value="chi_sim">Chinese (Simplified)</option>
-    <option value="jpn">Japanese</option>
-    <!-- Add more languages as needed -->
-  </select>
-
-  <div id="loader">⏳ Processing image...</div>
+  <div id="loader">⏳ Processing your image...</div>
   <div class="output-box" id="outputText">Your extracted text will appear here...</div>
+  
+  <button id="copyBtn" style="display:none;">Copy to Clipboard</button>
+  <button id="darkModeToggle">Toggle Dark Mode</button>
 </div>
 
 <!-- Tesseract.js -->
@@ -112,7 +134,17 @@
   const dropZone = document.getElementById('dropZone');
   const outputText = document.getElementById('outputText');
   const loader = document.getElementById('loader');
-  const langSelect = document.getElementById('langSelect');
+  const copyBtn = document.getElementById('copyBtn');
+  const darkModeToggle = document.getElementById('darkModeToggle');
+
+  let isDarkMode = false;
+
+  // Dark Mode Toggle
+  darkModeToggle.addEventListener('click', () => {
+    isDarkMode = !isDarkMode;
+    document.body.classList.toggle('dark-mode', isDarkMode);
+    darkModeToggle.textContent = isDarkMode ? 'Switch to Light Mode' : 'Switch to Dark Mode';
+  });
 
   // Image upload
   imageInput.addEventListener('change', (e) => {
@@ -137,11 +169,11 @@
     dropZone.style.background = '#e3eaf0';
   });
   dropZone.addEventListener('dragleave', () => {
-    dropZone.style.background = '#f0f4f7';
+    dropZone.style.background = '#eef5fb';
   });
   dropZone.addEventListener('drop', (e) => {
     e.preventDefault();
-    dropZone.style.background = '#f0f4f7';
+    dropZone.style.background = '#eef5fb';
     const file = e.dataTransfer.files[0];
     if (file) handleOCR(file);
   });
@@ -152,11 +184,13 @@
     const reader = new FileReader();
     reader.onload = async () => {
       const imgData = reader.result;
-      const selectedLang = langSelect.value;
+
+      // Combine multiple languages for better recognition
+      const langSet = 'eng+urd+ara+hin+fra+deu+spa';
 
       const result = await Tesseract.recognize(
         imgData,
-        selectedLang,
+        langSet,
         {
           langPath: 'https://tessdata.projectnaptha.com/4.0.0_best',
           logger: m => console.log(m)
@@ -164,10 +198,12 @@
       );
 
       const text = result.data.text.trim();
-      outputText.textContent = text || "❌ Text not recognized!";
-      
-      // Adjust direction if RTL language
-      if (["urd", "ara", "fas", "heb"].includes(selectedLang)) {
+      outputText.textContent = text || "❌ No text recognized!";
+      copyBtn.style.display = text ? 'block' : 'none';
+
+      // Auto adjust text direction for RTL languages like Urdu
+      const rtlPattern = /[\u0600-\u06FF\u0750-\u077F\u08A0-\u08FF]+/;
+      if (rtlPattern.test(text)) {
         outputText.style.direction = "rtl";
         outputText.style.textAlign = "right";
       } else {
@@ -179,6 +215,14 @@
     };
     reader.readAsDataURL(file);
   }
+
+  // Copy to clipboard functionality
+  copyBtn.addEventListener('click', () => {
+    const text = outputText.textContent;
+    navigator.clipboard.writeText(text).then(() => {
+      alert('Text copied to clipboard!');
+    });
+  });
 </script>
 
 </body>
